# tokenizers-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  CMakePresets.json  example.cc  vcpkg.json
include/: tokenizers_c.h  tokenizers_cpp.h  tokenizers_rust.h
rust/: Cargo.toml
rust/src/: lib.rs
src/: huggingface_tokenizer.cc  rwkv_world_tokenizer.cc  sentencepiece_tokenizer.cc  test_tokenizers_c.cc  tokenizers_cpp.cc  tokenizers_rust.cc
vcpkg_modified/ports/sentencepiece/: config.diff  decode.patch  portfile.cmake  sentencepieceConfig.cmake.in.patch  vcpkg.json
